--- a/.env
+++ b/.env
@@ -12,6 +12,14 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
+UI_BACKLINK_HEADER=Deze pagina wordt vermeld op
+UI_NO_BACKLINKS_MESSAGE=Niet op andere pagina's vermeld
+UI_SEARCH_BUTTON_TEXT=Zoeken
+UI_SEARCH_PLACEHOLDER=Type...
+UI_SEARCH_ENTER_HINT=Selecteer met Enter
+UI_SEARCH_NAVIGATE_HINT=Navigeer
+UI_SEARCH_CLOSE_HINT=Sluiten met ESC
+UI_SEARCH_NO_RESULTS=Niets gevonden
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
