--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SITE_NAME_HEADER=De Bospolle
-SITE_MAIN_LANGUAGE=nl
+SITE_MAIN_LANGUAGE=nl_NL
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=dd, mmm, yyyy h:mm a
