--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-UI_BACKLINK_HEADER=Deze pagina wordt vermeld op
-UI_NO_BACKLINKS_MESSAGE=Niet op andere pagina's vermeld
+UI_BACKLINK_HEADER=Gelinkte vermeldingen
+UI_NO_BACKLINKS_MESSAGE=Geen terugverwijzingen
 UI_SEARCH_BUTTON_TEXT=Zoeken
 UI_SEARCH_PLACEHOLDER=Type...
 UI_SEARCH_ENTER_HINT=Selecteer met Enter
