--- a/.env
+++ b/.env
@@ -24,11 +24,11 @@ THEME=https://raw.githubusercontent.com/FireIsGood/obsidian-everforest-enchanted
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
-dgLinkPreview=false
+dgLinkPreview=true
 dgShowTags=true
