--- a/.env
+++ b/.env
@@ -20,6 +20,8 @@ UI_SEARCH_ENTER_HINT=Selecteer met Enter
 UI_SEARCH_NAVIGATE_HINT=Navigeer
 UI_SEARCH_CLOSE_HINT=Sluit met ESC
 UI_SEARCH_NO_RESULTS=Niets gevonden
+THEME=https://raw.githubusercontent.com/AnubisNekhet/AnuPpuccin/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
