--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ UI_SEARCH_NAVIGATE_HINT=Navigeer
 UI_SEARCH_CLOSE_HINT=Sluit met ESC
 UI_SEARCH_NO_RESULTS=Niets gevonden
 THEME=https://raw.githubusercontent.com/AnubisNekhet/AnuPpuccin/HEAD/theme.css
-BASE_THEME=dark
+BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
