--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ UI_SEARCH_ENTER_HINT=Selecteer met Enter
 UI_SEARCH_NAVIGATE_HINT=Navigeer
 UI_SEARCH_CLOSE_HINT=Sluit met ESC
 UI_SEARCH_NO_RESULTS=Niets gevonden
-THEME=https://raw.githubusercontent.com/Spekulucius/obsidian-brainhack/HEAD/theme.css
-BASE_THEME=light
+THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
